feat: add avatar thumbnail
